# GameEngine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/audio/: Audio.cpp
engine/source/font/: FontManager.cpp
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/physics/: CollisionObject.cpp  CollisionObject.h  KinematicCharacterController.cpp  PhysicsManager.cpp  RigidBody.cpp  RigidBody.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp
engine/source/scene/: Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.h  AudioComponent.h  AudioListenerComponent.h  CameraComponent.cpp  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  SpriteComponent.cpp  SpriteComponent.h
engine/source/scene/components/ui/: ButtonComponent.cpp  CanvasComponent.cpp  CanvasComponent.h  RectTransformComponent.cpp  RectTransformComponent.h  TextComponent.cpp  UIElementComponent.h
source/: CMakeLists.txt  Game.cpp  Game.h  JumpPlatform.cpp  JumpPlatform.h  Player.cpp  TestObject.cpp  TestObject.h  main.cpp
